styles.css
body {
  color: #4E4C65;
  background: white;
  -webkit-font-smoothing: antialiased;
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  font-size: 1.2em;
  line-height: 1.5em;
}

a {
  text-decoration: none;
  color: inherit;
}

button, input[type=submit] {
  background-color: #504F77;
  color: #efdf9b;
  border: none;
  font-weight: bolder;
  font-size: 1em;
  padding: 10px;
}

li {
  list-style: none;
  padding-left: 2em;
  padding-top: 0.4em;
  padding-bottom: 0.4em;
}

h2 {
  margin: 1.5em;
}

h3 {
  margin-top: 2em;
  margin-bottom: 1.3em;
}

.head {
  position: fixed;
  z-index: 999;
  width: 100%;
  background: none;
  overflow: hidden;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  opacity: 0;
  top: -100px;
  padding-bottom: 6px;
  max-height: 50px;
}

.sticky {
  background: rgba(30,30,30,0.85);
  opacity: 1;
  top: 0px;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.5);
}

.logo {
  float: left;
  color: #dbd48b;
  font-weight: bold;
  font-size: 1.5em;
}
@media only screen and (max-width: 766px) {
  .logo {
    display: none;
  }
}

.logo-img {
  width: 100px;
}

.head-nav ul {
  list-style: none;
  overflow: hidden;
  text-align: center;
  float: right;
  margin: 0;
}

@media only screen and (max-width: 766px) {
  .head-nav ul {
    float: left;
    text-align: left;
    width: 100%;
    padding: 0;
  }
  .head-nav ul p {
    text-align: center;
  }
}

.head-nav ul li {
  display: inline-block;
  margin-left: 25px;
  overflow: hidden;
}

@media only screen and (max-width: 400px) {
  .head-nav ul li:nth-of-type(5) {
    margin-left: 45px;
  }
}

@media only screen and (max-width: 766px) {
  .head-nav ul li {
    margin-left: 10px;
    height: auto;
  }
}

.head-nav a {
  color: #ddd;
  text-transform: uppercase;
  font-size: 11px;
}

.head-nav p {
  margin: 0;
}

.row {
  width: 100%;
  max-width: 940px;
  margin: 15px auto;
  position: relative;
  overflow: hidden;
  /* todo: clarify why "overflow: hidden;" works to make height depend on content*/
}

.info {
  width: 100%;
  margin-top: 80px;
}

.about {
  float: left;
}

.contact {
  float: right;

}

.call-back {
  float: right;
  clear: right;
}

.banner {
  background: url('img/header-bg.jpg') center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  min-height: 500px;
}

@media only screen and (max-width: 766px) {
  .banner {
    min-height: 300px;
  }
}

.hero {
  position: relative;
  top: 50px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  background: rgba(30,30,30,0.85);
  border-top: 1px solid rgba(0,0,0,0.2);
  max-width: 1000px;
  max-height: 300px;
  min-height: 200px;
}

@media only screen and (max-width: 766px) {
  .hero {
    min-height: 0;
  }
}

.hero h1,
.hero h2,
.hero h3 {
  font-weight: 100;
  text-transform: uppercase;
  color: #dbd48b;
}

.hero h1 {
  font-size: 40px;
}

.fast-order {
  margin: auto;
  width: 500px;
  margin-bottom: 100px;
  margin-top: 50px;
  color: #504F77;
}

.fast-order input[type=text] {
  float: right;
}

.centered {
  text-align: center;
}

.centered ul {
  text-align: left;
}

.col2 {
  width: 50%;
  float: left;
}

.col3 {
  width: 30%;
  float: left;
  text-align: center;
}

.col3-2 {
  width: 60%;
  float: left;
}

.cat-img {
  width: 90%;
}

